<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <ImageView
        android:id="@+id/ImagenBomba"
        android:layout_width="wrap_content"
        android:layout_height="150dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="1dp"
        android:layout_marginEnd="20dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="5dp"
        tools:ignore="ImageContrastCheck"
        tools:srcCompat="@tools:sample/avatars" />

        <LinearLayout
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvName"
                android:layout_width="match_parent"
                android:layout_height="32dp"
                android:text="@string/Nombre"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvType"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Tipo"

                android:textSize="18dp" />

            <TextView
                android:id="@+id/tvMarca"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Marca"
                android:textSize="18dp" />

            <TextView
                android:id="@+id/tvOther"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Otro"
                android:textSize="16sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="162dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textV1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="24sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textV2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:textSize="18dp" />

            <TextView
                android:id="@+id/textV3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="18dp" />

            <TextView
                android:id="@+id/textV4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="16sp" />

        </LinearLayout>

    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="11dp"
        android:background="#01579B" />


</LinearLayout>


