<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Jabones">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="visible"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="1dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginTop="15dp"
                android:layout_marginStart="300dp"
                app:srcCompat="@drawable/unilever_logo_200px" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <!--Boton de Almacen.-->
            <Button
                android:id="@+id/btnAlmacen"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_marginStart="50dp"
                android:layout_marginTop="50dp"
                android:layout_marginBottom="5dp"
                android:background="@drawable/btn_jabones"
                android:onClick="almacen"
                android:text="@string/Almacen"
                android:textSize="24sp" />

            <!--Boton de Bombas.-->
            <Button
                android:id="@+id/btnBombas"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_marginStart="15dp"
                android:layout_marginTop="50dp"
                android:layout_marginBottom="5dp"
                android:background="@drawable/btn_jabones"
                android:onClick="bombas"
                android:text="@string/Bombas"
                android:textSize="24sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <!--Boton de Lubricantes.-->
            <Button
                android:id="@+id/btnLub"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_marginStart="50dp"
                android:layout_marginTop="25dp"
                android:layout_marginBottom="5dp"
                android:background="@drawable/btn_jabones"
                android:onClick="lubricantes"
                android:text="Lubricantes" />

            <!--Boton de Bandas.-->
            <Button
                android:id="@+id/button3"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_marginStart="15dp"
                android:layout_marginTop="25dp"
                android:layout_marginBottom="5dp"
                android:background="@drawable/btn_jabones"
                android:onClick="bandas"
                android:text="BANDAS"
                android:textSize="24sp" />
        </LinearLayout>
    </LinearLayout>






    <!--Boton de Calculadora.-->

    <Button
        android:id="@+id/button"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:background="@drawable/btn_jabones"
        android:onClick="calculadora"
        android:text="@string/Calculadora"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.881"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.846" />

    <!--Boton de Lista.-->
    <Button
        android:id="@+id/button2"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:background="@drawable/btn_jabones"
        android:text="@string/button_list"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.881"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.919" />

</androidx.constraintlayout.widget.ConstraintLayout>